--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,12 @@ services:
   emails:
     build: .
     container_name: psitest-emails
-    command: fastapi dev app --host 0.0.0.0 --port 80
+    command: fastapi run app --host 0.0.0.0 --port 80
     ports:
       - 8006:80
-    volumes:
-      - .:/app
     networks:
       - mynetwork
-    env_file: ".env.docker"
+    env_file: ".env"
 networks:
   mynetwork:
     external: true
