📝 Ajuste no readme

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,8 @@ services:
     ports:
       - 8006:80
     networks:
-      - mynetwork
+      - psitest
     env_file: ".env"
 networks:
-  mynetwork:
+  psitest:
     external: true
